--- a/src/index.css
+++ b/src/index.css
@@ -34,15 +34,21 @@ body {
   position: absolute;
   background: #fff;
   width: 69%;
-  max-height: 400px;
+  height: 500px;
+  overflow: scroll;
   left: 16%;
   box-sizing: border-box;
   border: 1px solid #e1e1e1;
   top: 42px;
-  overflow: hidden;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   z-index: 100;
+}
+.search-result{
+    max-height: 200px;
+    border-bottom: 1px solid gray;
+    padding-bottom: 2%;
+    margin-bottom: 2%;
 }
 .search-result .movie-info {
   display: flex;
@@ -50,7 +56,7 @@ body {
   justify-content: space-around;
 }
 .search-result .movie-info button {
-  max-width: 40%;
+  max-width: 60%;
   margin: 20px 10px;
   background: #21ba45;
   color: #fff;
@@ -69,8 +75,7 @@ body {
   display: flex;
 }
 .search-result img {
-  /* height: 100%;
-  width: 100%; */
+  width: 40%;
 }
 .search-result > div span {
   font-size: 20px;
