search result css improved

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -33,7 +33,7 @@ body {
 .search-results {
   position: absolute;
   background: #fff;
-  width: 69%;
+  width: 68%;
   max-height: 500px;
   overflow: scroll;
   left: 16%;
@@ -44,26 +44,42 @@ body {
   border-bottom-right-radius: 5px;
   z-index: 100;
 }
-.search-result{
-    max-height: 200px;
-    border-bottom: 1px solid gray;
-    padding-bottom: 2%;
-    margin-bottom: 2%;
+.search-result {
+  max-height: 200px;
+  border-bottom: 1px solid gray;
+  margin-bottom: 2%;
 }
 .search-result .movie-info {
+  position: relative;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
+.search-result .movie-info .movie-title {
+  position: absolute;
+  top: 10%;
+  left: 15%;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.search-result .movie-info .movie-year {
+  position: absolute;
+  bottom: 10%;
+  color: #5a5a5a;
+}
 .search-result .movie-info button {
-  max-width: 60%;
+  position: absolute;
+  right: 5%;
+  top: 60%;
+  max-width: 120px;
   margin: 20px 10px;
   background: #21ba45;
   color: #fff;
   font-weight: 600;
   font-size: 14px;
   border: none;
-  padding: 9px 0;
+  padding: 9px 8px;
   border-radius: 4px;
 }
 
@@ -72,10 +88,15 @@ body {
 }
 
 .search-result {
+  box-sizing: border-box;
   display: flex;
 }
+.search-result .search-img {
+  width: 30%;
+}
 .search-result img {
-  width: 40%;
+  width: 100%;
+  height: 100%;
 }
 .search-result > div span {
   font-size: 20px;
